Fixed major issues on mobile browsers
Scroll-related calculations for mobile were only accurate when the URL bar was
hidden, otherwise the scroll indicator and scrollTo functions were off. This
was fixed by adjusting calculations to use calculated size of elements rather
than theoretical calculations relying on window.innerHeight etc.

Made some additional small changes such as text in links not being
highlight-able.

--- a/main.css
+++ b/main.css
@@ -25,6 +25,8 @@
     flex: 1;
     justify-content: center;
     align-items: center;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
 .pagelink a {
@@ -78,6 +80,8 @@
 
 #harry, #fixedharry {
     color: #800020;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
 #fixedharry {
