--- a/pages/education.css
+++ b/pages/education.css
@@ -28,6 +28,7 @@
 
 .edu-logo {
     width: 100px;
+    object-fit: contain;
 }
 
 .edu-div {
